// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/products GET /admin/products returns a list of products with only giftcard in list 1`] = `
Array [
  Object {
    "collection": null,
    "collection_id": null,
    "created_at": Any<String>,
    "deleted_at": null,
    "description": "test-giftcard-description",
    "discountable": false,
    "external_id": null,
    "handle": "test-giftcard",
    "height": null,
    "hs_code": null,
    "id": StringMatching /\\^prod_\\*/,
    "images": Array [],
    "is_giftcard": true,
    "length": null,
    "material": null,
    "metadata": null,
    "mid_code": null,
    "options": Array [
      Object {
        "created_at": Any<String>,
        "deleted_at": null,
        "id": StringMatching /\\^opt_\\*/,
        "metadata": null,
        "product_id": StringMatching /\\^prod_\\*/,
        "title": "Denominations",
        "updated_at": Any<String>,
      },
    ],
    "origin_country": null,
    "profile_id": StringMatching /\\^sp_\\*/,
    "status": "draft",
    "subtitle": null,
    "tags": Array [],
    "thumbnail": null,
    "title": "Test Giftcard",
    "type": null,
    "type_id": null,
    "updated_at": Any<String>,
    "variants": Array [
      Object {
        "allow_backorder": false,
        "barcode": null,
        "calculated_price": null,
        "calculated_price_incl_tax": null,
        "calculated_tax": null,
        "created_at": Any<String>,
        "deleted_at": null,
        "ean": null,
        "height": null,
        "hs_code": null,
        "id": StringMatching /\\^variant_\\*/,
        "inventory_quantity": 0,
        "length": null,
        "manage_inventory": true,
        "material": null,
        "metadata": null,
        "mid_code": null,
        "options": Array [
          Object {
            "created_at": Any<String>,
            "deleted_at": null,
            "id": StringMatching /\\^opt_\\*/,
            "metadata": null,
            "option_id": StringMatching /\\^opt_\\*/,
            "updated_at": Any<String>,
            "value": "100",
            "variant_id": StringMatching /\\^variant_\\*/,
          },
        ],
        "origin_country": null,
        "original_price": null,
        "original_price_incl_tax": null,
        "original_tax": null,
        "prices": Array [
          Object {
            "amount": 100,
            "created_at": Any<String>,
            "currency_code": "usd",
            "deleted_at": null,
            "id": Any<String>,
            "max_quantity": null,
            "min_quantity": null,
            "price_list": null,
            "price_list_id": null,
            "region_id": null,
            "updated_at": Any<String>,
            "variant_id": StringMatching /\\^variant_\\*/,
          },
        ],
        "product_id": StringMatching /\\^prod_\\*/,
        "sku": null,
        "tax_rates": null,
        "title": "Test variant",
        "upc": null,
        "updated_at": Any<String>,
        "weight": null,
        "width": null,
      },
    ],
    "weight": null,
    "width": null,
  },
]
`;

exports[`/admin/products POST /admin/products creates a product 1`] = `
Object {
  "collection": Object {
    "created_at": Any<String>,
    "deleted_at": null,
    "handle": "test-collection",
    "id": "test-collection",
    "metadata": null,
    "title": "Test collection",
    "updated_at": Any<String>,
  },
  "collection_id": "test-collection",
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "test-product-description",
  "discountable": true,
  "external_id": null,
  "handle": "test",
  "height": null,
  "hs_code": null,
  "id": StringMatching /\\^prod_\\*/,
  "images": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": Any<String>,
      "metadata": null,
      "updated_at": Any<String>,
      "url": "test-image.png",
    },
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": Any<String>,
      "metadata": null,
      "updated_at": Any<String>,
      "url": "test-image-2.png",
    },
  ],
  "is_giftcard": false,
  "length": null,
  "material": null,
  "metadata": null,
  "mid_code": null,
  "options": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": StringMatching /\\^opt_\\*/,
      "metadata": null,
      "product_id": StringMatching /\\^prod_\\*/,
      "title": "size",
      "updated_at": Any<String>,
    },
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": StringMatching /\\^opt_\\*/,
      "metadata": null,
      "product_id": StringMatching /\\^prod_\\*/,
      "title": "color",
      "updated_at": Any<String>,
    },
  ],
  "origin_country": null,
  "profile_id": StringMatching /\\^sp_\\*/,
  "status": "draft",
  "subtitle": null,
  "tags": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": Any<String>,
      "metadata": null,
      "updated_at": Any<String>,
      "value": "123",
    },
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": Any<String>,
      "metadata": null,
      "updated_at": Any<String>,
      "value": "456",
    },
  ],
  "thumbnail": "test-image.png",
  "title": "Test",
  "type": Object {
    "created_at": Any<String>,
    "deleted_at": null,
    "id": "test-type",
    "metadata": null,
    "updated_at": Any<String>,
    "value": "test-type",
  },
  "type_id": "test-type",
  "updated_at": Any<String>,
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": null,
      "calculated_price": null,
      "calculated_price_incl_tax": null,
      "calculated_tax": null,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": null,
      "height": null,
      "hs_code": null,
      "id": StringMatching /\\^variant_\\*/,
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Array [
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": StringMatching /\\^optval_\\*/,
          "metadata": null,
          "option_id": StringMatching /\\^opt_\\*/,
          "updated_at": Any<String>,
          "value": "large",
          "variant_id": StringMatching /\\^variant_\\*/,
        },
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": StringMatching /\\^optval_\\*/,
          "metadata": null,
          "option_id": StringMatching /\\^opt_\\*/,
          "updated_at": Any<String>,
          "value": "green",
          "variant_id": StringMatching /\\^variant_\\*/,
        },
      ],
      "origin_country": null,
      "original_price": null,
      "original_price_incl_tax": null,
      "original_tax": null,
      "prices": Array [
        Object {
          "amount": 100,
          "created_at": Any<String>,
          "currency_code": "usd",
          "deleted_at": null,
          "id": StringMatching /\\^ma_\\*/,
          "max_quantity": null,
          "min_quantity": null,
          "price_list": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": StringMatching /\\^variant_\\*/,
        },
        Object {
          "amount": 45,
          "created_at": Any<String>,
          "currency_code": "eur",
          "deleted_at": null,
          "id": StringMatching /\\^ma_\\*/,
          "max_quantity": null,
          "min_quantity": null,
          "price_list": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": StringMatching /\\^variant_\\*/,
        },
        Object {
          "amount": 30,
          "created_at": Any<String>,
          "currency_code": "dkk",
          "deleted_at": null,
          "id": StringMatching /\\^ma_\\*/,
          "max_quantity": null,
          "min_quantity": null,
          "price_list": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": StringMatching /\\^variant_\\*/,
        },
      ],
      "product_id": StringMatching /\\^prod_\\*/,
      "sku": null,
      "tax_rates": null,
      "title": "Test variant",
      "upc": null,
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
  "weight": null,
  "width": null,
}
`;

exports[`/admin/products POST /admin/products updates a product (update prices, tags, update status, delete collection, delete type, replaces images) 1`] = `
Object {
  "collection": null,
  "collection_id": null,
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "test-product-description",
  "discountable": true,
  "external_id": null,
  "handle": "test-product",
  "height": null,
  "hs_code": null,
  "id": "test-product",
  "images": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": StringMatching /\\^img_\\*/,
      "metadata": null,
      "updated_at": Any<String>,
      "url": "test-image-2.png",
    },
  ],
  "is_giftcard": false,
  "length": null,
  "material": null,
  "metadata": null,
  "mid_code": null,
  "options": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": "test-option",
      "metadata": null,
      "product_id": "test-product",
      "title": "test-option",
      "updated_at": Any<String>,
    },
  ],
  "origin_country": null,
  "profile_id": StringMatching /\\^sp_\\*/,
  "status": "published",
  "subtitle": null,
  "tags": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": "tag1",
      "metadata": null,
      "updated_at": Any<String>,
      "value": "123",
    },
  ],
  "thumbnail": "test-image-2.png",
  "title": "Test product",
  "type": Object {
    "created_at": Any<String>,
    "deleted_at": null,
    "id": StringMatching /\\^ptyp_\\*/,
    "metadata": null,
    "updated_at": Any<String>,
    "value": "test-type-2",
  },
  "type_id": StringMatching /\\^ptyp_\\*/,
  "updated_at": Any<String>,
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": "test-barcode",
      "calculated_price": null,
      "calculated_price_incl_tax": null,
      "calculated_tax": null,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": "test-ean",
      "height": null,
      "hs_code": null,
      "id": "test-variant",
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Array [
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": "test-variant-option",
          "metadata": null,
          "option_id": "test-option",
          "updated_at": Any<String>,
          "value": "Default variant",
          "variant_id": "test-variant",
        },
      ],
      "origin_country": null,
      "original_price": null,
      "original_price_incl_tax": null,
      "original_tax": null,
      "prices": Array [
        Object {
          "amount": 75,
          "created_at": Any<String>,
          "currency_code": "usd",
          "deleted_at": null,
          "id": "test-price",
          "max_quantity": null,
          "min_quantity": null,
          "price_list": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": "test-variant",
        },
      ],
      "product_id": "test-product",
      "sku": "test-sku",
      "tax_rates": null,
      "title": "Test variant",
      "upc": "test-upc",
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
  "weight": null,
  "width": null,
}
`;
